# memvora-cli

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: workflow.yml
scripts/: publish.ps1
src/ai_memory_cli/: __init__.py  cli.py
src/memvora_cli/: __init__.py  cli.py
