[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memvora"
version = "0.1.18"
description = "Python CLI for Memvora terminal capture and offline sync."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Memvora" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai", "memory", "cli", "terminal", "rag", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = []

[project.scripts]
memvora = "memvora_cli.cli:main"

[tool.setuptools]
script-files = ["bin/watch.cmd"]

[tool.setuptools.packages.find]
where = ["src"]
